--- a/Plug/index.html
+++ b/Plug/index.html
@@ -50,7 +50,7 @@
 			autoplay	:true,
 			timer		:3000,
 			color		:"green",
-			feed		:"http://www.cmjornal.pt/rss",
+			feed		:"http://feeds.bbci.co.uk/news/business/rss.xml,http://rss.cnn.com/rss/edition.rss",
 			feedlabels	:"Correio da manha",
 			feedcount	:3	
 		});
