--- a/Plug/index.html
+++ b/Plug/index.html
@@ -21,10 +21,8 @@
 </style>
 <body>
 <header>
-	<h1>Breaking News Ticker</h1>
-    <h3>Jquery Plugin</h3>
-    <a href="index.html">HTML Data Example</a>
-    <a class="active" href="rss.html">RSS Data Example</a>
+	<h1>Sistema de Noticias</h1>
+    
 </header>
 
 
@@ -50,7 +48,7 @@
 			autoplay	:true,
 			timer		:3000,
 			color		:"green",
-			feed		:"http://feeds.bbci.co.uk/news/business/rss.xml,http://rss.cnn.com/rss/edition.rss",
+			feed		:"http://www.cmjornal.pt/rss",
 			feedlabels	:"Correio da manha",
 			feedcount	:3	
 		});
