--- a/Plug/index.html
+++ b/Plug/index.html
@@ -44,16 +44,16 @@
 <script>
 	$(window).load(function(e) {
         $("#bn1").breakingNews({
-			effect		:"slide-h",
+			effect		:"slide-v",
 			autoplay	:true,
-			timer		:3000,
-			color		:"green",
+			timer		:2500,
+			color		:"darkred",
 			feed		:"http://www.cmjornal.pt/rss",
 			feedlabels	:"Correio da manha",
-			feedcount	:3	
+			feedcount	:15	
 		});
     });
 </script>
-
+/*sdsdd
 </body>
 </html>
