--- a/Plug/index.html
+++ b/Plug/index.html
@@ -54,6 +54,7 @@
 		});
     });
 </script>
-<!-- sdsdd -->
+<!-- colors select - "red", "green", "yellow", "turquoise", "orange", "purple", "darkred", "black", "light","pink" -->
+<!-- size banner - Small("bn-small") - Big("bn-large") -->
 </body>
 </html>
