--- a/Plug/index.html
+++ b/Plug/index.html
@@ -28,7 +28,7 @@
 
 <div style="width:100%; max-width:960px; margin:0 auto; padding:0 20px 50px 20px; box-sizing:border-box;">
 
-	<div class="breakingNews bn-large" id="bn1">
+	<div class="breakingNews" id="bn1">
     	<div class="bn-title"><h2>Correio da Manhã</h2><span></span></div>
         <ul>
         	
@@ -47,7 +47,7 @@
 			effect		:"slide-v",
 			autoplay	:true,
 			timer		:2500,
-			color		:"darkred",
+			color		:"yellow",
 			feed		:"http://www.cmjornal.pt/rss",
 			feedlabels	:"Correio da manha",
 			feedcount	:15	
