--- a/Plug/index.html
+++ b/Plug/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>IDEABOX Elegant Forms</title>
 
-<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin-ext' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin-ext' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="css/breakingNews.css"/>
 
 <script src="js/jQuery.js"></script>
