--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; 3StepLex. Design: <a href="http://html5up.net">HTML5 UP</a><a href="">3StepLex</a></span>
+						<span class="copyright">&copy; 3StepLex. Design: <a href="http://html5up.net">HTML5 UP</a>&nbsp;&bull;&nbsp;<a href="">3StepLex</a></span>
 					</footer>
 
 			</div>
