--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" href="Plug/css/breakingNews.css"/>
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		
-	        <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin-ext' rel='stylesheet1' type='text/css'>
-                <link rel="stylesheet1" type="text/css" href="Plug/css/breakingNews.css"/>
+	       
 		<script src="Plug/js/jQuery.js"></script>
                 <script src="Plug/js/breakingNews.js"></script>
 		
