--- a/Plug/index.html
+++ b/Plug/index.html
@@ -11,7 +11,17 @@
 <script src="js/breakingNews.js"></script>
 </head>
 
-
+<style>
+	body{padding:0; margin:0; font-family:'PT Sans'; font-size:16px; background:url(img/pattern.png);}
+	header{width:100%; padding:50px 0; text-align:center; color:#FFF;}
+	header h1{ font-size:48px;}
+	
+</style>
+<body>
+<header>
+	<h1>Sistema de Noticias</h1>
+    
+</header>
 
 
 <div style="width:100%; max-width:960px; margin:0 auto; padding:0 20px 50px 20px; box-sizing:border-box;">
