--- a/Plug/index.html
+++ b/Plug/index.html
@@ -2,8 +2,6 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>IDEABOX Elegant Forms</title>
-
 <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin-ext' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="css/breakingNews.css"/>
 
@@ -12,17 +10,12 @@
 </head>
 
 <style>
-	body{padding:0; margin:0; font-family:'PT Sans'; font-size:16px; background:url(img/pattern.png);}
+	body{padding:0; margin:0; font-family:'PT Sans'; font-size:16px;}
 	header{width:100%; padding:50px 0; text-align:center; color:#FFF;}
 	header h1{ font-size:48px;}
 	
 </style>
 <body>
-<header>
-	<h1>Sistema de Noticias</h1>
-    
-</header>
-
 
 <div style="width:100%; max-width:960px; margin:0 auto; padding:0 20px 50px 20px; box-sizing:border-box;">
 
