--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<header id="header">
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
-						<div>$('#body').load('Plug/index.html');
+						<div><script>('#body').load('Plug/index.html');</script>
 						</div>
 						<nav>
 							<ul>
