--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 					<header id="header">
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
-						<div><script>('#body').load('Plug/index.html');</script>
-						</div>
+						<script>(document).ready(function(){
+$('body').load('Plug/index.html'); 
+});</script>
+						
 						<nav>
 							<ul>
 								
