--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		
-	       
+	        <script src="http://www.w3schools.com/lib/w3data.js"></script>
 		
         </head>
 	<body class="loading">
@@ -22,9 +22,11 @@
 					<header id="header">
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
-						<script>(document).ready(function(){
-$('body').load('Plug/index.html'); 
-});</script>
+						<div w3-include-html="Plug/index.html"></div> 
+
+<script>
+w3IncludeHTML();
+</script>
 						
 						<nav>
 							<ul>
