--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		
-	        <script src="Plug/js/breakingNews.js"></script>
+	        <script src="jquery.js"></script> 
+                <script> 
+                  (function(){
+                  ("#div").load("Plug/index.html"); 
+                  });
+                </script> 
 		
         </head>
 	<body class="loading">
@@ -22,11 +27,7 @@
 					<header id="header">
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
-						<div w3-include-html="//Plug/index.html"></div> 
-
-<script>
-w3IncludeHTML();
-</script>
+						<div id="div"></div>
 						
 						<nav>
 							<ul>
