--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	        <script src="jquery.js"></script> 
                 <script> 
                   (function(){
-                  ("#div").load("Plug/index.html"); 
+                  ("div").load("Plug/index.html"); 
                   });
                 </script> 
 		
