--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		
-	        <script src="jquery.js"></script> 
-                <script> 
-                  (function(){
-                  ("div").load("Plug/index.html"); 
-                  });
-                </script> 
 		
         </head>
 	<body class="loading">
@@ -27,7 +21,7 @@
 					<header id="header">
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
-						<div id="div"></div>
+						<link rel="import" href="http://example.com/elements.html">
 						
 						<nav>
 							<ul>
