--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header">
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
-						<link rel="import" href="Plug/index.html">
+						<link rel="import" href="//NewsMov/Plug/index.html">
 						
 						<nav>
 							<ul>
