--- a/index.html
+++ b/index.html
@@ -21,7 +21,20 @@
 					<header id="header">
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
-						<link rel="import" href="https://3steplex.github.io/NewsMov/Plug/index">
+<div style="width:100%; max-width:960px; margin:0 auto; padding:0 20px 50px 20px; box-sizing:border-box;">
+
+	<div class="breakingNews" id="bn1">
+    	<div class="bn-title"><h2>Correio da Manhã</h2><span></span></div>
+        <ul>
+        	
+        </ul>
+        <div class="bn-navi">
+        	<span></span>
+            <span></span>
+        </div>
+    </div>
+
+</div>
 						
 						<nav>
 							<ul>
