--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
 						
-<div><iframe name="interno" width="800" height="400" src="Plug/index.html"></iframe></div>
+<div><iframe src="Plug/index.html"></iframe></div>
 
 						
 						<nav>
