--- a/Plug/ind.html
+++ b/Plug/ind.html
@@ -128,7 +128,7 @@
     });
 	$(window).load(function(e) {
         $("#bn3").breakingNews({
-			effect		:"slide-v",
+			effect		:"slide-h",
 			autoplay	:true,
 			timer		:2500,
 			color		:"turquoise",
@@ -139,7 +139,7 @@
     });
 	$(window).load(function(e) {
         $("#bn4").breakingNews({
-			effect		:"slide-v",
+			effect		:"slide-h",
 			autoplay	:true,
 			timer		:2300,
 			color		:"turquoise",
