--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header">
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
- 						<div><iframe width="100%" height="400%" src="Plug/ind"></iframe></div>
+ 						<div><iframe width="400%" src="Plug/ind"></iframe></div>
 				                <nav>
 							<ul>
 								
