--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
  						
 				                <nav>
-							<div><iframe width="100%" src="Plug/ind"></iframe></div>
+							<iframe width="100%" src="Plug/ind"></iframe>
 							<ul>
 								
 								<li><a href="facebook.com/3StepLex" class="icon fa-facebook" title="Página da 3StepLex"><span class="label">Facebook</span></a></li>
