--- a/Plug/ind.html
+++ b/Plug/ind.html
@@ -34,7 +34,7 @@
 <p>&nbsp;</p>
 	
 	<div class="breakingNews" id="bn2">
-    	<div class="bn-title"><h2>PÚblico</h2><span></span></div>
+    	<div class="bn-title"><h2>Público</h2><span></span></div>
         <ul>
         	
         </ul>
