--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
  						<iframe width="100%" src="Plug/ind"></iframe>
+						<iframe width="100%" src="Plug/ind"></iframe>
 				                <nav>
 							<ul>
 								
