--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 					<header id="header">
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
- 						<iframe width="100%" height="100%" src="Plug/ind"></iframe>
+ 						<iframe style="overflow: hidden; height: 100%;
+        width: 100%; position: absolute;" height="100%" width="100%" src="Plug/ind"></iframe>
 				                <nav>
 							<ul>
 								
