--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 					<header id="header">
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
- 						<iframe style=" height:100%;
-        width: 100%; " height="100%" width="100%" src="Plug/ind"></iframe>
+ 						<iframe width="auto" src="Plug/ind"></iframe>
 				                <nav>
 							<ul>
 								
