--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 					<header id="header">
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
- 						<iframe width="auto" src="Plug/ind"></iframe>
+ 						<!-- <iframe width="auto" src="Plug/ind"></iframe> -->
+						<iframe width="auto" src="http://tevratgundogdu.com/works/breakingnewsticker/index.html"></iframe>
 				                <nav>
 							<ul>
 								
