--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
  						<!-- <iframe width="auto" src="Plug/ind"></iframe> -->
-						<iframe width="auto" src="http://tevratgundogdu.com/works/breakingnewsticker/index.html"></iframe>
+						<iframe width="100%" src="http://www.tevratgundogdu.com/works/breakingnewsticker/index.html"></iframe>
 				                <nav>
 							<ul>
 								
