--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 					<header id="header">
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
- 						<!-- <iframe width="auto" src="Plug/ind"></iframe> -->
-						<iframe width="100%" src="http://www.tevratgundogdu.com/works/breakingnewsticker/index.html"></iframe>
+ 						<iframe width="200%" src="Plug/ind"></iframe> 
 				                <nav>
 							<ul>
 								
