--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
 					<header id="header">
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
- 						<iframe width="100%" src="Plug/ind"></iframe>
-						&nbsp;
-						&nbsp;
-						&nbsp;
-                                                &nbsp;
-						&nbsp;
+ 						<iframe width="100%" src="Plug/ind" src="Plug/ind"></iframe>
 				                <nav>
 							<ul>
 								
