--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 					<header id="header">
 						<h1>Notícias  Nacionais</h1>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
- 						<iframe width="100%" src="Plug/ind" src="Plug/ind"></iframe>
+ 						<iframe width="100%" src="Plug/ind"></iframe>
+						<p>&nbsp;</p>
+						<p>&nbsp;</p>
 				                <nav>
 							<ul>
 								
