--- a/Plug/ind.html
+++ b/Plug/ind.html
@@ -17,7 +17,7 @@
 </style>
 <body>
 
-<div style=" width:100%; max-width:960px; margin:0 auto; padding:0 20px 50px 20px; ">
+<div style=" width:100%; max-width:960px; margin:0 auto; padding:0 20px 50px 20px; box-sizing:border-box;">
 
 	<div class="breakingNews" id="bn1">
     	<div class="bn-title"><h2>Correio da Manhã</h2><span></span></div>
