--- a/Plug/fn.html
+++ b/Plug/fn.html
@@ -34,7 +34,7 @@
 <p>&nbsp;</p>
 	
 	<div class="breakingNews" id="bn2">
-        <div class="bn-title" id="bn1"><h2>Canais TV/Rádio</h2><span></span></div>
+        <div class="bn-title" id="bn1"><h2>TV/Rádio</h2><span></span></div>
         <ul>
         	
         </ul>
@@ -51,7 +51,7 @@
 			effect		:"slide-h",
 			autoplay	:true,
 			timer		:3000,
-			color		:"red",
+			color		:"darkred",
 			feed		:"http://www.cmjornal.pt/rss,http://feeds.feedburner.com/PublicoRSS,http://feeds.feedburner.com/expresso-geral,http://feeds.feedburner.com/obs-ultimas,http://feeds.jn.pt/JN-Ultimas,http://www.jornaldenegocios.pt/rss",
 			feedlabels	:"Jornais",
 			feedcount	:5	
@@ -63,9 +63,9 @@
 			effect		:"slide-v",
 			autoplay	:true,
 			timer		:3200,
-			color		:"darkred",
+			color		:"light",
 			feed		:"http://feeds.feedburner.com/sicnoticias-ultimas,http://www.rtp.pt/noticias/rss,http://feeds.tsf.pt/TSF-Ultimas,http://rr.sapo.pt/rss/rssfeed.aspx?section=section_noticias",
-			feedlabels	:"Canais TV/Rádio",
+			feedlabels	:"TV/Rádio",
 			feedcount	:5	
 		});
     });
