--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<nav>
 							<ul>
 								
-								<li><a href="facebook.com/3StepLex" class="icon fa-facebook" title="Página da 3StepLex"><span class="label">Facebook</span></a></li>
+								<li><a href="https://facebook.com/3StepLex" class="icon fa-facebook" title="Página da 3StepLex"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/3steplex" class="icon fa-github" title="Os meus projetos"><span class="label">Github</span></a></li>
 								<li><a href="mailto:3steplex@hotmail.com" class="icon fa-envelope-o" title="Contacto profissional"><span class="label">Email</span></a></li>
 							</ul>
