--- a/Plug/ind2.html
+++ b/Plug/ind2.html
@@ -48,11 +48,11 @@
 <script>
 	$(window).load(function(e) {
         $("#bn1").breakingNews({
-			effect		:"slide-h",
+			effect		:"slide-v",
 			autoplay	:true,
 			timer		:3000,
 			color		:"turquoise",
-			feed		:"http://www.cmjornal.pt/rss,http://feeds.feedburner.com/PublicoRSS,http://feeds.feedburner.com/expresso-geral,http://feeds.feedburner.com/obs-ultimas,http://feeds.jn.pt/JN-Ultimas,http://www.jornaldenegocios.pt/rss",
+			feed		:"http://jornaldascaldas.com/Rss/GetFeed.aspx?feed=A559AA40-2F2A-4a40-9785-CE4D6CADBEE9,http://regiaodanazare.com/Rss/GetFeed.aspx?feed=A559AA40-2F2A-4a40-9785-CE4D6CADBEE9,http://jornaldealcobaca.com/Rss/GetFeed.aspx?feed=A559AA40-2F2A-4a40-9785-CE4D6CADBEE9,http://recortes.pt/Info/RSS/49",
 			feedlabels	:"Jornais",
 			feedcount	:5	
 		});
@@ -60,11 +60,11 @@
 <!--	
 	$(window).load(function(e) {
         $("#bn2").breakingNews({
-			effect		:"slide-v",
+			effect		:"slide-h",
 			autoplay	:true,
 			timer		:3200,
 			color		:"light",
-			feed		:"http://feeds.feedburner.com/sicnoticias-ultimas,http://www.rtp.pt/noticias/rss,http://feeds.tsf.pt/TSF-Ultimas,http://rr.sapo.pt/rss/rssfeed.aspx?section=section_noticias",
+			feed		:"",
 			feedlabels	:"TV/Rádio",
 			feedcount	:5	
 		});
