--- a/znoeste.html
+++ b/znoeste.html
@@ -19,7 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Notícias  Nacionais</h1>
+						<h1>Notícias  Regionais</h1>
+						<h2>Zona Norte do Oeste </h2>
 						<p>Rápidas &nbsp;&bull;&nbsp; Curtas &nbsp;&bull;&nbsp; O essencial</p>
  						<iframe width="100%" src="Plug/ind2"></iframe>
 						<nav>
